<resources>
    <string name="app_name">UFRN Drivers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btn_enable_disable_bt">Habilitar/Desabilitar Bluetooth</string>
    <string name="btn_find_bt_devices">Localizar Dispositivos</string>
    <string name="config_bluetooth">Configurar Bluetooth</string>

    <string name="btn_read_qrcode">Ler QRCode</string>

    <string name="btn_config_bluetooth">Configurar Bluetooth</string>
    <string name="btn_enable_disable_discovery">Habilitar/Desabilitar descoberta</string>
    <string name="btn_start_data_collection">Iniciar coleta de dados</string>

    <string name="btn_add_car_info">Adicionar Informação</string>
    <string name="btn_list_car_info">Listar Informações</string>

    <string name="car_info">Informações de Veículos</string>
    <string name="btn_car_info">Informações de Veículos</string>
    <string name="btn_start_services">Iniciar Serviços</string>
    <string name="btn_stop_services">Parar Serviços</string>

    <string name="btn_add_user_location">Adicionar Localização</string>
    <string name="btn_list_user_location">Listar Localizações</string>
    <string name="btn_user_location">Localizações do Usuário</string>
    <string name="user_location">Localizações do Usuário</string>
</resources>
