<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_config_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_config_bluetooth" />

        <Button
            android:id="@+id/btn_car_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_car_info" />

        <Button
            android:id="@+id/btn_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_location" />

        <Button
            android:id="@+id/btn_start_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_services" />

        <Button
            android:id="@+id/btn_stop_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop_services" />

        <TextView
            android:id="@+id/log_operacoes"
            android:layout_width="match_parent"
            android:layout_height="467dp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/btn_read_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:src="@drawable/baseline_vpn_key_24"
        app:backgroundTint="@color/colorPrimaryDark"
        android:tint="#ffffff"
        android:layout_margin="16dp" />

</RelativeLayout>
