<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_enable_disable_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_enable_disable_bt" />

        <Button
            android:id="@+id/btn_enable_disable_discovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_enable_disable_discovery" />

        <Button
            android:id="@+id/btn_find_bluetooth_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_find_bt_devices" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

</LinearLayout>
